2003-04-04  Per Bothner  <per@bothner.com>

	* kawa/standard/define_class.java (scanForDefinitions):  Use getDefine.

2003-04-01  Per Bothner  <per@bothner.com>

	* kawa/standard/set_b.java (rewrite):  Handle Symbol assignee.
	Based on patch from Vladimir Tsichevski <wowa@jet.msk.su>.

2003-03-29  Jim White  <jim@pagesmiths.com>

	* build.xml:  Various fixes.

2003-03-24  Chris Dean  <ctdean@mercedsystems.com>

	* kawa/standard/load.java (loadRlative):  Fix typo to loadRelative.

2003-03-24  Per Bothner  <per@bothner.com>

	* kawa/standard/object.java (rewriteClassDef):  Allow names to be
	Symbol as well as String.
	* kawa/standard/define_class.java (scanForDefinitions):  Likewise.
	(rewriteForm):  Likewise.

	* kawa/lang/Translator.java (getBinding):  Follow aliases.
	Needed if Syntax is imported from some other module.

2003-03-21  Per Bothner  <per@bothner.com>

	* configure.in:  Set am__fastdepGCJ_TRUE in non-gcj case.
	Remove kawa_bin variable.
	* configure:  Re-generate using auoconf 2.57.
	* aclocal.m4:  Re-generate using aclocal 1.7.3.
	* */Makefile.in:  Re-generate using automake 1.7.3.

2003-03-06  Per Bothner  <per@bothner.com>

	* configure.in:  Set version to 1.7beta1.
	* build.xml (version.release):  Set to 1.7beta1.

2003-03-03  Per Bothner  <per@bothner.com>

	* kawa/standard/load.java (relative):  New boolean field.
	(<init>):  Add constructor.
	(load, loadRelative):  New static fields.
	(loadSource, apply):  Take boolean parameter.
	(loadSource):  Handle URLs.  Resolve usng baseUri or baseUriDefault.
	(apply1, apply2):  Pass relative flag.
	(apply):  Set/restore base URI.
	* kawa/standard/Scheme.java:  Add load-relative and base-uri.
	* kawa/Shell.java (runFile):  Update for extra load.apply parameter.

2003-03-02  Per Bothner  <per@bothner.com>

	* kawa/Shell.java (runFile):  Use Environment.getCurrent instead of
	Environment.user, which should probably be deprecated.

2003-01-29  Per Bothner  <per@bothner.com>
