@@ -1,3 +1,10 @@
+2003-04-06  Per Bothner  <per@bothner.com>
+
+	* kawa/lang/EqualPat.java (print):  Don't use SFormat.
+	* kawa/lang/ListRepeatPat.java (print, match):  Likewise.
+	* kawa/lang/PairPat.java (print):  Likewise.
+	* kawa/lang/SyntaxRules.java (expand):  Likewise.
+
 2003-04-04  Per Bothner  <per@bothner.com>
 
 	* kawa/standard/define_class.java (scanForDefinitions):  Use getDefine.
